Fix bug 341592 (Crash on first start of Sunbird - "Failed to get the script language").  r/sr=bz