dom/src/base/nsDOMScriptObjectFactory.h
@@ -62,6 +62,7 @@ class nsDOMScriptObjectFactory : public nsIDOMScriptObjectFactory,
 {
 public:
   nsDOMScriptObjectFactory();
+  virtual ~nsDOMScriptObjectFactory();
 
   NS_DECL_ISUPPORTS
 
